# EVAProject

./: .env  .example.env  .gitignore  EvaDBIntegration.py  Issues.txt  README.md  Rams31.py  confirmationGUI.py  connectWifi.py  currentReqs.txt  display.py  drugsCom.py  homeScreenGui.py  initalSetup.py  integrate.py  keyboard.py  newMeds.py  newReqs2.txt  originalReqs.txt  postScanDisplay.py  pyproject.toml  reminder.py  saveToDb.py  speech.py  standbysequence.py  tempGuiHomeScreenWhiteBox.py  textExtraction.py  voiceRec.py
EXPOFILES/: GUI.py  Tasklist.md  UIController.py  confirmationGUI.py  drugInfoGui.py  expoGui.py  homeGui.py  individualDrug.py  main.py  postScanDisplay.py  reportsGui.py  speech.py  voiceCommand.py
EXPOFILES/assets/: IbuprofenInfo.json
EXPOFILES/confirmations/: individualConfirm.py
EXPOFILES/constants/: auth.py  colors.py  confirmations.py  database.py  window.py
EXPOFILES/database/: dbUtils.py
EXPOFILES/database/classes/: confirmations.py  medications.py  weekly_reminders.py
EXPOFILES/database/mutations/: mutation.py
EXPOFILES/database/queries/: query.py
EXPOFILES/drugInfo/: individualDrug.py  readSite.py
EXPOFILES/reports/: generateReport.py  individualReport.py
EXPOFILES/scanBottle/: counter.py  editBottleGui.py  editInfo.py  individualEdit.py  keyboard.py  scanBottleGui.py  scannerInstructions.py  scanningFunction.py
EXPOFILES/scanBottle/camera/: cameraControls.py  captureImage.py
EXPOFILES/scanBottle/postScanDisplay/: dateFilled.py  medName.py  refillDate.py  utility.py  (+2 more)
EXPOFILES/utils/: alerts.py  data_manip.py  interfaceHelpers.py  itemHelpers.py  wrappers.py
OLD_EXPO/: display.py  expoGui.py  report2.py
OLD_ROOT/: Responce.py  bottleFixerKeyboard.py  drugsCom.py  evaGUI.py  fullRunDemo.py  homeScreenGui.py  main.py  reminder.py  saveImages.py  tempGuiHomeScreenWhiteBox.py
database/: createUser.sql  database.sql  deleteDB.sql  initdb.sql
database/migrations/: 02222023.sql  02_05_2023.sql  02_10_2023.sql  02_11_2023.sql
database/old/: initdb_022220232.sql  initdb_02242023.sql  initdb_03202023.sql  initdb_04012023.sql  initdb_04052023.sql
scripts/: 1_buildDeps.sh  2_installPyEnv.sh  5_initdb.sh  6_fontAndAuth.sh  6_optionalInstalls.sh  7_foldermake.sh  activate.sh  buildDeps_1.sh  clean_and_initdb.sh  collectPythonDeps_4.sh  initdb_6.sh  initializeVirtualEnv_4.sh  installPyEnv_2.sh  poetryInstall_3.sh
sept/: pyvenv.cfg
sept16/: 1.py  pyvenv.cfg
sept16/Scripts/: Activate.ps1  activate.bat  garden  pycycle-script.py  pycycle.exe.manifest  pytesseract-script.py  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
test/: test.py
(+1 files in other folders)
